[gd_scene load_steps=3 format=3 uid="uid://b0pbvdnxgdtr4"]

[ext_resource type="Theme" uid="uid://4aipq7wfdcga" path="res://assets/theme_trello_default.tres" id="2"]
[ext_resource type="Script" path="res://scripts/list_mouse_preview.gd" id="3"]

[node name="List" type="PanelContainer"]
custom_minimum_size = Vector2(280, 0)
offset_right = 280.0
offset_bottom = 160.0
rotation = 3.5
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2")
script = ExtResource("3")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(240, 80)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VerticalContent" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ListNameLabel" type="Label" parent="Panel/MarginContainer/VerticalContent"]
layout_mode = 2
theme = ExtResource("2")
text = "List Name"
max_lines_visible = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/MarginContainer/VerticalContent"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CardsContainer" type="VBoxContainer" parent="Panel/MarginContainer/VerticalContent/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Card" type="MarginContainer" parent="Panel/MarginContainer/VerticalContent/ScrollContainer/CardsContainer"]
custom_minimum_size = Vector2(240, 40)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CardContent" type="PanelContainer" parent="Panel/MarginContainer/VerticalContent/ScrollContainer/CardsContainer/Card"]
custom_minimum_size = Vector2(240, 40)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2

[node name="InnerPadding" type="MarginContainer" parent="Panel/MarginContainer/VerticalContent/ScrollContainer/CardsContainer/Card/CardContent"]
layout_mode = 2
mouse_filter = 2
